# otus-microservice-architecture-hw

./: Dockerfile  Makefile  README.md  init_db.py  pyproject.toml  Схема взаимодействия сервисов.drawio
hw/: config.py  db.py  main.py  routes.py  utils.py
hw/views/: health.py  users.py
manifests/: deployment.yml  ingress.yml  service.yml
project/: Makefile
project/app/: main.py  models.py
project/migrations/: env.py
project/migrations/versions/: 148fd61b6f42_init.py
scripts/: parse-url.sh
tests/: test_utils.py
