[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Дмитрий Захаров <dzakharov@astralinux.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.10.9"
gunicorn = "23.0.0"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
